fixes
dark mode burger, hero image overlapping, hero p margin, burger bugs

--- a/scss/syles.scss
+++ b/scss/syles.scss
@@ -78,7 +78,7 @@ p {
   );
 }
 .nav-bar-container {
-  position: fixed;
+  position: relative;
   z-index: 9999;
   width: 100%;
   background-color: var(--neutral-clr-white);
@@ -95,18 +95,7 @@ p {
   height: 90px;
   justify-content: space-between;
   align-items: center;
-  .burger-opened {
-    display: none;
-    path {
-      fill: var(--primary-clr-darkBlue);
-    }
-  }
-  .burger-closed {
-    display: inline-block;
-    path {
-      fill: var(--primary-clr-darkBlue);
-    }
-  }
+
   .nav-links {
     display: flex;
     height: 100%;
@@ -152,6 +141,17 @@ p {
   }
 }
 
+.burger-menu {
+  display: none;
+}
+
+.burger-opened,
+.burger-closed {
+  path {
+    fill: var(--primary-clr-darkBlue);
+  }
+}
+
 .nav-links li + li {
   margin-left: 1rem;
 }
@@ -165,18 +165,17 @@ p {
 .hero-section {
   position: relative;
   z-index: 1;
-  background-image: url(/images/bg-intro-desktop.svg);
-  background-origin: border-box;
-  background-position: 220% 70%;
+  background-image: url(../images/bg-intro-desktop.svg);
+  background-position: 200% 60%;
   background-size: 80%;
   background-repeat: no-repeat;
   grid-column: 1 / 6;
   display: flex;
-  height: 88vh;
+  height: 80vh;
   align-items: center;
   .hero-image {
     position: absolute;
-    top: -6rem;
+    top: -7rem;
     right: -6rem;
     width: 674.5px;
   }
@@ -185,7 +184,7 @@ p {
   }
   .hero-p {
     max-width: 23em;
-    margin: 1rem 0;
+    margin: 2.5rem 0;
   }
   .hero-title {
     font-size: 50px;
@@ -193,6 +192,11 @@ p {
     font-weight: 300;
     color: var(--primary-clr-darkBlue);
   }
+}
+
+.features-container,
+.articles {
+  padding: 2.5rem 0;
 }
 
 .features-container {
@@ -428,7 +432,6 @@ footer {
     }
   }
   .menu-overlay {
-    display: none;
     position: fixed;
     z-index: 10;
     top: 0;
@@ -465,12 +468,23 @@ footer {
       }
     }
   }
+  .mobile-link:active {
+    color: var(--primary-clr-lime) !important;
+  }
   .nav-links {
     display: none !important;
   }
   .burger-menu {
     display: flex !important;
     align-items: center;
+  }
+
+  .burger-closed {
+    display: block;
+  }
+
+  .burger-opened {
+    display: none;
   }
 
   .nav-request {
@@ -552,5 +566,10 @@ footer {
     .footer-nav-items {
       margin: 0 !important;
     }
+  }
+
+  .features-container,
+  .articles {
+    padding: 0;
   }
 }
